Refactor role management and enhance error handling
- Added String role in User and Admin models
- Update UserPrincipal to handle single role
- Modify JwtService to include single role in token
- Implement custom AccessDeniedHandler using ErrorResponse
- Update AuthenticationService and SecurityConfig for role changes
- Moved ErrorResponse from the dto directory to the responses directory for consistency